<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/extension">

        <EditTextPreference
            app:key="signature"
            app:title="@string/ext"
            app:defaultValue="@string/csv"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/guarF">
        <SwitchPreference
            app:key="ficheL"
            app:title="@string/ficheL"
            app:summary="@string/ficheLS"
            app:enabled="true"
            />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/guarH">
        <SwitchPreference
            app:key="ficheH"
            app:title="@string/ficheH"
            app:summary="@string/ficheHS"
            app:enabled="true"
            />
    </PreferenceCategory>

</PreferenceScreen>
